# remove_bg

./: README.md  setup.cfg  setup.py
src/remove_bg/: remove.py
src/remove_bg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
