[metadata]
name = remove_bg
version = 1.0.0
author = MyFaduGame
author_email = navinsharma9376319931@gmail.com
description = Remove Background with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/MyFaduGame/remove_bg/
project_urls =
    Bug Tracker = https://www.github.com/MyFaduGame/remove_bg/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries

install_requires = 
    pillow
    rembg

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src